--- a/linear_regression_21_03.ipynb
+++ b/linear_regression_21_03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJyIPh9HTIr8qU2lVmBTHp",
+      "authorship_tag": "ABX9TyNvph0SzYGG4JtZwnJgj1Js",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 51,
       "metadata": {
         "id": "l0_GC7tPgj99"
       },
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "TxUJgLgri7SK"
       },
-      "execution_count": 38,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "PdS-3c0UjOdU"
       },
-      "execution_count": 39,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "6FZsTXoWjhFn"
       },
-      "execution_count": 40,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -84,9 +84,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YGA1ovFbjzBY",
-        "outputId": "fe28b7d9-7f24-46b2-d5ae-39a2c505a6a6"
+        "outputId": "8eaf2d57-5644-44b7-c2c8-4ea4968c697b"
       },
-      "execution_count": 41,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,9 +111,9 @@
           "height": 265
         },
         "id": "lAPTFpdvocd7",
-        "outputId": "91216402-85cd-487d-e714-680e2c90cd88"
+        "outputId": "885c139a-1958-4505-ed5c-2cb37881fe20"
       },
-      "execution_count": 42,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "display_data",
@@ -126,6 +126,58 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LinearRegression\n"
+      ],
+      "metadata": {
+        "id": "10iUptRlsrxl"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [[1], [2], [3], [4], [5]]\n",
+        "b = [[2], [4], [5], [4], [5]]"
+      ],
+      "metadata": {
+        "id": "I-QGiYQgu4X2"
+      },
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reg = LinearRegression()\n",
+        "\n",
+        "# Train the model using the input data\n",
+        "reg.fit(a, b)\n",
+        "\n",
+        "# Print the coefficient\n",
+        "print(reg.coef_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8Qve1yYVuszW",
+        "outputId": "2a297f37-ac06-49ed-9b79-2875c879bc54"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.6]]\n"
+          ]
         }
       ]
     }
